--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,5 @@
     <string name="resetColorTxtSub">Remettre le thème de base</string>
     <string name="changeColorMatiereSalleTxt">Changer la couleur de la matière</string>
     <string name="add_event">Ajouter un évenement</string>
-    <string name="title_activity_add_event">AddEventActivity</string>
+    <string name="title_activity_add_event">Exceptions</string>
 </resources>
